// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`thread list page matches snapshot for basic server-side rendering 1`] = `
<DocumentFragment>
  <header>
    <h1
      id="title"
    >
      *chan
    </h1>
  </header>
  <hr />
  <main>
    <section
      class="post-form"
    >
      <span
        class="post-form__txt"
      >
        [
        <button
          class="post-form__btn"
        >
          Start a New Thread
        </button>
        ]
      </span>
      <noscript>
        &lt;form action="/" method="post"&gt;&lt;table class="post-form__table"&gt;&lt;tbody&gt;&lt;tr&gt;&lt;th&gt;&lt;label for="subject"&gt;Subject&lt;/label&gt;&lt;/th&gt;&lt;td&gt;&lt;input id="subject" name="subject" type="text" value=""/&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;th&gt;&lt;label for="comment"&gt;Comment&lt;/label&gt;&lt;/th&gt;&lt;td&gt;&lt;textarea id="comment" name="comment"&gt;&lt;/textarea&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td colSpan="2" class="post-form__post-cell"&gt;&lt;button type="submit"&gt;Post&lt;/button&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/tbody&gt;&lt;/table&gt;&lt;/form&gt;
      </noscript>
    </section>
    <hr />
    <p>
      Currently no threads exist. Why don't you create the first one?
    </p>
  </main>
  <nav>
    <ol
      class="page-select"
      data-testid="page-select"
    >
      <li
        class="page-select__page page-select__page--active"
      >
        [
        <a
          href="/"
        >
          1
        </a>
        ]
      </li>
    </ol>
  </nav>
  <footer
    class="footer"
    id="bottom"
  >
    <p>
      *chan (pronounced as starchan) is a
      <!-- -->
       
      <a
        href="https://en.wikipedia.org/wiki/Textboard"
      >
        textboard
      </a>
       
      <!-- -->
      that demonstrates one of
      <!-- -->
       
      <a
        href="#"
      >
        Lean JS App Starter's full-stack project setups
      </a>
      . It showcases an Express server that acts as a REST API and a React server-side renderer. These work in tandem with a React frontend.
    </p>
    <nav>
      <ul
        class="footer__links"
      >
        <li>
          <a
            href="#"
          >
            About
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            *chan GitHub
          </a>
        </li>
        <li>
          <a
            href="https://github.com/mattlean/lean-js-app-starter"
          >
            Lean JavaScript Application Starter
          </a>
        </li>
      </ul>
    </nav>
  </footer>
</DocumentFragment>
`;

exports[`thread page matches snapshot for basic server-side rendering 1`] = `
<DocumentFragment>
  <header>
    <h1
      id="title"
    >
      *chan
    </h1>
  </header>
  <hr />
  <main>
    <section
      class="post-form"
    >
      <span
        class="post-form__txt"
      >
        [
        <button
          class="post-form__btn"
        >
          Post a Reply
        </button>
        ]
      </span>
      <noscript>
        &lt;form action="/thread/65200adeed075a6920b9129a" method="post"&gt;&lt;table class="post-form__table"&gt;&lt;tbody&gt;&lt;tr&gt;&lt;th&gt;&lt;label for="comment"&gt;Comment&lt;/label&gt;&lt;/th&gt;&lt;td&gt;&lt;textarea id="comment" name="comment"&gt;&lt;/textarea&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td colSpan="2" class="post-form__post-cell"&gt;&lt;button type="submit"&gt;Post&lt;/button&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/tbody&gt;&lt;/table&gt;&lt;/form&gt;
      </noscript>
    </section>
    <hr />
    <nav>
      [
      <a
        href="/"
      >
        Return
      </a>
      ] [
      <a
        href="#bottom"
      >
        Bottom
      </a>
      ]
      <hr />
    </nav>
    <section>
      <header
        id="65200adeed075a6920b9129a"
      >
        <span
          class="user"
        >
          Anonymous
        </span>
         
        <time
          datetime="2023-10-06T13:25:50.369Z"
        >
          10/06/23(Fri)06:25:50
        </time>
         
        <a
          class="jump-to-link"
          href="/thread/65200adeed075a6920b9129a#65200adeed075a6920b9129a"
        >
          Id.
          <!-- -->
          65200adeed075a6920b9129a
        </a>
      </header>
      <pre>
        Thread that only has a comment!
      </pre>
    </section>
    <nav>
      <hr />
      [
      <a
        href="/"
      >
        Return
      </a>
      ] [
      <a
        href="#top"
      >
        Top
      </a>
      ]
    </nav>
  </main>
  <footer
    class="footer"
    id="bottom"
  >
    <p>
      *chan (pronounced as starchan) is a
      <!-- -->
       
      <a
        href="https://en.wikipedia.org/wiki/Textboard"
      >
        textboard
      </a>
       
      <!-- -->
      that demonstrates one of
      <!-- -->
       
      <a
        href="#"
      >
        Lean JS App Starter's full-stack project setups
      </a>
      . It showcases an Express server that acts as a REST API and a React server-side renderer. These work in tandem with a React frontend.
    </p>
    <nav>
      <ul
        class="footer__links"
      >
        <li>
          <a
            href="#"
          >
            About
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            *chan GitHub
          </a>
        </li>
        <li>
          <a
            href="https://github.com/mattlean/lean-js-app-starter"
          >
            Lean JavaScript Application Starter
          </a>
        </li>
      </ul>
    </nav>
  </footer>
</DocumentFragment>
`;
